# necromancer

./: README.md  pyproject.toml  run.py
src/necromancer/: dispatcher.py  prompt.py
templates/necromancer/: _context_python.txt  _job_base.txt  _output_format.txt  job_code.txt  job_context_overview.txt  job_context_sanitycheck.txt  job_context_tool.txt  job_document.txt  job_plan.txt  job_review.txt  job_sketch.txt  role_architect.txt  role_dev.txt  role_sre.txt  role_staff.txt
