
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "necromancer"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
             "jinja2",
             "openai",
             "pyprojroot",
             "pytest",
             "typer"
             ]

[tool.setuptools.packages.find]
where = ["src"]